--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,11 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
-    "sqlite3": "^5.1.6",
-    "ws": "^8.18.3"
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
-    "@types/ws": "^8.18.1",
     "typescript": "^5.9.2"
   }
 }
