--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^8.27.0",
-    "babylonjs": "^8.27.0"
+    "babylonjs": "^8.27.0",
+    "socket.io-client": "^4.8.1"
   }
 }
