--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "vite": "^5.4.19"
   },
   "dependencies": {
-    "@babylonjs/core": "^8.27.0",
-    "babylonjs": "^8.27.0",
-    "socket.io-client": "^4.8.1"
+    "@babylonjs/core": "8.27.2",
+    "@babylonjs/gui": "8.27.2",
+    "@babylonjs/materials": "8.27.2",
+    "socket.io-client": "4.8.1"
   }
 }
